--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <!--Plugin CSS-->
     <link href="css/plugin.css" rel="stylesheet" type="text/css">
-    <link href="scss/_default.scss" rel="stylesheet" type="text/css">
 
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.min.css">
@@ -41,8 +40,8 @@
                         <!-- Brand and toggle get grouped for better mobile display -->
                         <div class="navbar-header">
                             <a class="navbar-brand" href="index.html">
-                                <img src="images/logo-white.png" alt="image">
-                                <img src="images/logo.png" alt="image">
+                                <img src="images/mun.png" alt="image">
+                                <img src="images/mun-orange.png" alt="image">
                             </a>
                         </div>
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -145,7 +144,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-lg-offset-5">
-                    <div class="coming-counter d-md-flex align-items-center justify-content-between p-4 py-5 text-md-start text-center" data-date="2023-12-28 00:00:00">
+                    <div class="coming-counter d-md-flex align-items-center justify-content-between p-4 py-5 text-md-start text-center" data-date="2024-05-11 07:30:00">
                         <div class="counter-box"><span class="days"></span><br> Days</div>
                         <div class="counter-box"><span class="hours"></span><br> Hours</div>
                         <div class="counter-box"><span class="minutes"></span><br> Minutes</div>
