--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eventiz - Event Conference HTML Templates</title>
+    <title>JECRC MUN - Event Conference HTML Templates</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <!-- Bootstrap core CSS -->
@@ -51,50 +51,31 @@
                                     <a href="index.html" class="">Home</a>
                                 </li>
 
-                                <li><a href="about.html" class="">About Us</a></li>
-
                                 <li class="submenu dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="fas fa-caret-down ms-1" aria-hidden="true"></i></a> 
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <i class="fas fa-caret-down ms-1" aria-hidden="true"></i></a> 
                                     <ul class="dropdown-menu">
-                                        <li><a href="event-schedule.html">Event Schedule</a></li>
-                                        <li><a href="event-detail.html">Event Detail</a></li>
-                                        <li><a href="speakers.html">Speaker Lists</a></li>
-                                        <li><a href="speaker-detail.html">Speaker Detail</a></li>
-                                        <li><a href="sponsors.html">Sponsors</a></li>
-                                        <li><a href="pricing.html">Pricing</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="testimonials.html">Testimonials</a></li>
-                                        <li><a href="faq.html">Faq</a></li>
-                                        <li><a href="comingsoon.html">Coming Soon</a></li>
-                                        <li><a href="search-result.html">Search Result</a></li>
-                                        <li><a href="404.html">404 Error</a></li>
+                                        <li><a href="#">MUN Conference</a></li>
+                                        <li><a href="#">Zero Hour Summit</a></li>
                                     </ul> 
                                 </li>
+
+                                <li><a href="#" class="">Collaboration</a></li>
+
                                 <li class="submenu dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shop <i class="fas fa-caret-down ms-1" aria-hidden="true"></i></a> 
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gallery <i class="fas fa-caret-down ms-1" aria-hidden="true"></i></a> 
                                     <ul class="dropdown-menu">
-                                        <li><a href="products.html">Product Lists</a></li>
-                                        <li><a href="product-detail.html">Product Detail</a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="myaccount.html">My Account</a></li>
-                                    </ul>
+                                        <li><a href="#">MUN Conference</a></li>
+                                        <li><a href="#">Zero Hour Summit</a></li>
+                                    </ul> 
                                 </li>
-                                <li class="submenu dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">News <i class="fas fa-caret-down ms-1" aria-hidden="true"></i></a> 
-                                    <ul class="dropdown-menu">
-                                        <li><a href="post-grid-1.html">All Posts</a></li>
-                                        <li><a href="detail-1.html">Single Post</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="#" class="">Sponsors</a></li>
+                                <li><a href="#" class="">Speakers</a></li>
                                 <li><a href="contact.html" class="">Contact Us</a></li>
-                                <li class="search-main">
-                                    <a href="#search1" class="mt_search"><i class="fa fa-search fs-5"></i></a>
-                                </li>
+                                <li><a href="#" class="">Team</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->  
                         <div class="register-login">
-                            <a href="#" class="nir-btn white">Buy Ticket <i class="fa fa-angle-right "></i></a>
+                            <a href="#" class="nir-btn white">Register Now <i class="fa fa-angle-right "></i></a>
                         </div>
 
                         <div id="slicknav-mobile"></div>
@@ -112,19 +93,22 @@
         <div class="container">
             <div class="banner-in pt-6">
                 <div class="row align-items-end">
-                    <div class="col-lg-7 mb-10">
+                    <div class="col-lg-7">
                         <div class="banner-content text-lg-start text-center">
-                            <h4 class="theme mb-0">Big Event 2024</h4>
+                            <h4 class="theme mb-0">Welcome to the</h4>
                             <div class="selector4" style="display: flex; justify-content: center;">
                                 <h1 class="ah-headline white">
-                                  <span>World Biggest 2023</span>
+                                  <span>13th edition of</span>
                                   <span class="ah-words-wrapper white">
-                                    <b class="is-visible textcap">Conference</b>
-                                    <b>Conference</b>
+                                    <b class="is-visible textcap">JECRC MUN</b>
+                                    <b>JECRC MUN</b>
                                   </span>
                                 </h1>
                             </div>
-                            <p class="mb-0 white">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                            <h3 class="mb-3 white">Empowering Deliberations<br/> Shaping The World </h3>
+                            <h2 class="ah-headline white">
+                                11th - 12th May
+                              </h2>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -171,9 +155,10 @@
                                             <i class="fa fa-users fs-1 theme"></i>
                                         </div>
                                         <div class="box-body">
-                                            <h4 class="infobox-title">Event Conferences </h4>
-                                            <p class="mb-2">Duis aute irure dolor in reprehenderit </p>
-                                            <a href="#" class="theme">Learn More <i class="fa fa-angle-right "></i></a>
+                                            <h4 class="infobox-title">ELEVATE YOUR RESUME </h4>
+                                            <p class="mb-2">Hone your public speaking, writing, and analytical skills, and gain knowledge through hands-on experience.
+                                            </p>
+                                            <!-- <a href="#" class="theme">Learn More <i class="fa fa-angle-right "></i></a> -->
                                         </div>
                                     </div>
                                     <div class="features-infobox border-all p-5 box-shadow bg-white text-center mb-4">
@@ -181,9 +166,9 @@
                                             <i class="fa fa-flag fs-1 theme"></i>
                                         </div>
                                         <div class="box-body">
-                                            <h4 class="infobox-title">Culture Leadership</h4>
-                                            <p class="mb-2">Duis aute irure dolor in reprehenderit </p>
-                                            <a href="#" class="theme">Learn More <i class="fa fa-angle-right "></i></a>
+                                            <h4 class="infobox-title">NETWORK WITH KINDRED SPIRITS</h4>
+                                            <p class="mb-2">Meet talented individuals from across the country, discover new cultures, and gain different perspectives. </p>
+                                            <!-- <a href="#" class="theme">Learn More <i class="fa fa-angle-right "></i></a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -193,9 +178,9 @@
                                             <i class="fa fa-gear fs-1 theme"></i>
                                         </div>
                                         <div class="box-body">
-                                            <h4 class="infobox-title">Digital Marketing</h4>
-                                            <p class="mb-2">Duis aute irure dolor in reprehenderit </p>
-                                            <a href="#" class="theme">Learn More <i class="fa fa-angle-right "></i></a>
+                                            <h4 class="infobox-title">RECOGNIZE GLOBAL ISSUES</h4>
+                                            <p class="mb-2">Recognize global issues and address the challenges through diplomacy and collaboration. </p>
+                                            <!-- <a href="#" class="theme">Learn More <i class="fa fa-angle-right "></i></a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -207,16 +192,18 @@
                             <h4 class="h-title">Events</h4>
                             <div class="selector4" style="display: flex; justify-content: center;">
                                 <h2 class="ah-headline">
-                                  <span>Why You Should Join The</span>
+                                  <span>Why Should You Join The</span>
                                   <span class="ah-words-wrapper white theme">
-                                    <b class="is-visible textcap">Events?</b>
+                                    <b class="is-visible textcap">JECRC MUN?</b>
                                     <b>Events?</b>
                                   </span>
                                 </h2>
                             </div>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                 Quis ip suspendisse ultrices gravida. Risus commodo</p>
-                            <a href="event-detail.html" class="nir-btn">Join Event <i class="fa fa-angle-right "></i></a>
+                            <p class="mb-4">Explore Rajasthan's largest MUN conference, with an outreach surpassing 18 lac, engaging 350+ institutes and welcoming over 3000 delegates to date.<br/>
+                                Join a global community, uniting over 100 international delegates, driven by a shared vision of progress and change. Hone your debating prowess to embark on a diplomatic journey, where each argument ignites inspiration, influence, and innovation. <br/>
+                                More than just a conference, it's a transformative platform for open dialogue, a leap towards a brighter future.
+                                </p>
+                            <!-- <a href="event-detail.html" class="nir-btn">Join Event <i class="fa fa-angle-right "></i></a> -->
                         </div>
                     </div>
     
@@ -234,19 +221,18 @@
                     <div class="col-lg-5 pe-4">
                         <div class="about-content section-title text-lg-start text-center mb-4">
                             <h3 class="h-title">About</h3>
-                            <h4 class="theme"> Conference Organisation</h4>
+                            <!-- <h4 class="theme"> JECRC MUN</h4> -->
                             <div class="selector4" style="display: flex; justify-content: center;">
                                 <h2 class="ah-headline">
-                                  <span>Conference, Seminars &</span>
-                                  <span class="ah-words-wrapper white theme">
-                                    <b class="is-visible textcap">Events</b>
-                                    <b>Events</b>
-                                  </span>
+                                  <span>JECRC MUN</span>
+                                  <!-- <span class="ah-words-wrapper white theme">
+                                    <b class="is-visible textcap">About Us</b>
+                                    <b>About Us</b>
+                                  </span> -->
                                 </h2>
                             </div>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                 Quis ip suspendisse ultrices gravida. Risus commodo</p>
-                            <a href="about.html" class="nir-btn">Discover Now <i class="fa fa-angle-right "></i></a>
+                            <p class="mb-4">JECRC MUN is a community established with the aim of creating a society for youth to discuss, debate and deliberate present-day crises contributing towards solutions for global imbalance. Focusing on the need to value ideas and approach toward solutions for the atrocities around the globe, some like-minded individuals figured a need for such a platform for people to discuss and deliberate With the laying of the foundation by Shri Kulbhushan Kothari, our journey began in 2012, with us being the first institution in Jaipur and second in Rajasthan to introduce Model UN to the crowd.</p>
+                            <a href="about.html" class="nir-btn">Read More <i class="fa fa-angle-right "></i></a>
                         </div>
                     </div>
                     <div class="col-lg-7 ps-4">
@@ -276,38 +262,49 @@
             
             <div class="counter">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6 mb-4">
+                    <div class="col-lg-2m col-md-6 col-sm-6 mb-4">
                         <div class="counter-item">
                             <div class="counter-content text-center">
-                                <h2 class="value mb-0">520</h2>
-                                <span class="m-0">Daily Visitors</span>
+                                <h2 class="value mb-0">180000</h2>
+                                <span class="m-0">Massive
+                                    Outreach</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 col-sm-6 mb-4">
+                    <div class="col-lg-2m col-md-6 col-sm-6 mb-4">
                         <div class="counter-item">
                             <div class="counter-content text-center">
-                                <h2 class="value mb-0">120</h2>
-                                <span class="m-0">Delivery Monthly</span>
+                                <h2 class="value mb-0">3000</h2>
+                                <span class="m-0">Delegates</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 col-sm-6 mb-4">
+                    <div class="col-lg-2m col-md-6 col-sm-6 mb-4">
                         <div class="counter-item">
                             <div class="counter-content text-center">
                                 <h2 class="value mb-0 ">100</h2>
-                                <span class="m-0">Positive Feedback</span>
+                                <span class="m-0">International Delegates</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 col-sm-6 mb-4">
+                    <div class="col-lg-2m col-md-6 col-sm-6 mb-4">
                         <div class="counter-item">
                             <div class="counter-content text-center">
-                                <h2 class="value mb-0">250</h2>
-                                <span class="m-0">Award Winning</span>
+                                <h2 class="value mb-0">350</h2>
+                                <span class="m-0">Participating
+                                    Institutes</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2m col-md-6 col-sm-6 mb-4">
+                        <div class="counter-item">
+                            <div class="counter-content text-center">
+                                <h2 class="value mb-0">15</h2>
+                                <span class="m-0">States and UTs</span>
                             </div>
                         </div>
                     </div>
