speaker name update

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
     <!-- Agendas end -->
 
     <!-- event-schedule starts -->
-    <section class="event-schedule pb-8 about-after">
+    <!-- <section class="event-schedule pb-8 about-after">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-4">
@@ -600,7 +600,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- event-schedule ends -->
 
     <!-- our teams starts -->
@@ -629,15 +629,8 @@
                                 <img src="images/team/img6.jpg" alt="team">
                             </div>
                             <div class="team-content text-center p-4">
-                                <h4 class="mb-0 theme">Gerardo Ambrose </h4>
-                                <p class="mb-3 white">Senior Agent</p>
-                                <div class="social-links">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.instagram.com/jecrcmun/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
+                                <h4 class="mb-0 theme">Mr. Sunil Rao </h4>
+                                <p class="mb-3 white">Country Head, Outreach, Google</p>
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -649,15 +642,8 @@
                                 <img src="images/team/img2.jpg" alt="team">
                             </div>
                             <div class="team-content text-center p-4">
-                                <h4 class="mb-0 theme">Horke Pels</h4>
-                                <p class="mb-3 white">Head Officer</p>
-                                <div class="social-links">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
+                                <h4 class="mb-0 theme">Shiv Shankar Menon</h4>
+                                <p class="mb-3 white">Former National Security Advisor</p>
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -666,15 +652,9 @@
                                 <img src="images/team/img3.jpg" alt="team">
                             </div>
                             <div class="team-content text-center p-4">
-                                <h4 class="mb-0 theme">Horke Pels</h4>
-                                <p class="mb-3 white">Head Officer</p>
-                                <div class="social-links">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
+                                <h4 class="mb-0 theme">Dr. Pratiba Patil</h4>
+                                <p class="mb-3 white">Former President of India</p>
+                                
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -686,15 +666,8 @@
                                 <img src="images/team/img4.jpg" alt="team">
                             </div>
                             <div class="team-content text-center p-4">
-                                <h4 class="mb-0 theme">Horke Pels</h4>
-                                <p class="mb-3 white">Head Officer</p>
-                                <div class="social-links">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
+                                <h4 class="mb-0 theme">Shri Kailash Satyarthi</h4>
+                                <p class="mb-3 white">Nobel Peace Prize 2014 Awardee</p>
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -703,15 +676,8 @@
                                 <img src="images/team/img1.jpg" alt="team">
                             </div>
                             <div class="team-content text-center p-4">
-                                <h4 class="mb-0 theme">Horke Pels</h4>
-                                <p class="mb-3 white">Head Officer</p>
-                                <div class="social-links">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
+                                <h4 class="mb-0 theme">Mr. Murthy</h4>
+                                <p class="mb-3 white">Global Head Academic, Microsoft</p>
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -723,24 +689,15 @@
                                 <img src="images/team/img5.jpg" alt="team">
                             </div>
                             <div class="team-content text-center p-4">
-                                <h4 class="mb-0 theme">Horke Pels</h4>
-                                <p class="mb-3 white">Head Officer</p>
-                                <div class="social-links">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
+                                <h4 class="mb-0 theme">Mrs. Hari Chandana Dasari</h4>
+                                <p class="mb-3 white">IAS and Social Worker</p>
                             </div>
                             <div class="overlay"></div>
                         </div>
                     </div>
 
                 </div>
-                <div class="speaker-btn text-center">
-                    <a href="speaker-detail.html" class="nir-btn">View All Speakers <i class="fa fa-angle-right "></i></a>
-                </div>
+
                 
             </div>
         </div>
