--- a/about.html
+++ b/about.html
@@ -266,21 +266,24 @@
     <footer class="pt-12 pb-7" style="background-image: url(images/pexels-sascha.jpg);">
 
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-between">
                 <div class="col-lg-4 col-md-6 mb-5 pe-lg-4">
                     <div class="footer-about">
-                        <img src="images/logo-white.png" alt="">
+                        <div class="image-text-container">
+                            <img src="images/mun.png" alt="">
+                            <p>JECRC MUN</p>
+                                                  
                         <p class="mt-3 mb-3 white">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odio suspendisse leo neque
-                            iaculis molestie sagittis maecenas aenean eget molestie sagittis.
+                            JECRC MUN is a community established with the aim of creating a society for youth to discuss, debate and deliberate present-day crises contributing towards solutions for global imbalance.
                         </p>
+                    </div> 
 
                         <div class="social-links">
                             <ul>
-                                <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/jecrcmun/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://x.com/JECRC_MUN?t=qN1KJtP4_r9a1RPt1pHvHQ&s=08"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.instagram.com/jecrcmun/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/jecrc-mun/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -290,43 +293,36 @@
                         <h4 class="white mb-4">Quick link</h4>
                         <ul class="list">
                             <li class="pb-2"><a href="about-us.html">About Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Services</a></li>
+                            <li class="pb-2"><a href="about-us.html">Gallery</a></li>
+                            <li class="pb-2"><a href="about-us.html">Sponsors</a></li>
                             <li class="pb-2"><a href="about-us.html">Speakers</a></li>
-                            <li class="pb-2"><a href="about-us.html">Schedule</a></li>
-                            <li class="pb-2"><a href="about-us.html">Ticket Pricing</a></li>
-                            <li><a href="#about-us.html">Contact Us</a></li>
+                            <li class="pb-2"><a href="#about-us.html">Contact Us</a></li>
+                            <li class="pb-2"><a href="about-us.html">Team</a></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5">
                     <div class="footer-links">
                         <h4 class="white mb-4">get In Touch</h4>
-                        <p class="mb-3">1616 Broadway NY, New York United States of America</p>
+                        <p class="mb-3">JECRC College,
+                            Shri Ram Ki Nangal,
+                            via Sitapura RIICO, Tonk Road, Jaipur
+                            Pincode - 302 022</p>
                         <div class="footer-contact d-flex align-items-center mb-3">
                             <i class="fa fa-phone white fs-4"></i>
                             <div class="footer-contact-content ps-3">
-                                <h6 class="white mb-0">955 444 1245</h6>
+                                <h6 class="white mb-0">Sapan Mittal - 8764364947
+                                    Manshi Singh - 8005538934</h6>
                                 <small class="white">For Information</small>
                             </div>
                         </div>
                         <div class="footer-contact d-flex align-items-center">
                             <i class="fa fa-envelope white fs-4"></i>
                             <div class="footer-contact-content ps-3">
-                                <h6 class="white mb-0">info@eventiz.com</h6>
+                                <h6><a href="mailto:mun@jecrc.ac.in">mun@jecrc.ac.in</a></h6>
                                 <small class="white">Email Address</small>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-5">
-                    <div class="footer-links">
-                        <h4 class="white mb-4">Subscribe To Our Newsletter</h4>
-                        <div class="newsletter-form ">
-                            <p class="mb-3">New subscribers get 10% off your next order</p>
-                            <form action="#" method="get" accept-charset="utf-8" class="border-0">
-                                <input type="text" placeholder="Email Address" class="w-100 mb-2">
-                                <button class="nir-btn w-100">Subscribe</button>
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -336,7 +332,10 @@
     </footer>
     <div class="footer-copyright bg-theme1">
         <div class="container">
-            <p class="m-0 white text-center py-3">Copyright ©2022 Eventiz. All Rights Reserved Copyright</p>
+            <p class="m-0 white text-center py-3">This site is maintained and developed by JECRC Technical Team</p>
+            <p><h6><a href="#"></a></h6></p>
+
+            <div>
         </div>
     </div>
     <!-- footer ends -->
