about us images update

--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                         <div class="about-features" style="background-image:url(images/contentbg.png);">
                             <div class="row align-items-center">
                                 <div class="col-lg-6 mb-4">
-                                    <img src="images/about/busi-3.jpg" alt="">
+                                    <img src="images/MUN/mun8.JPG" alt="">
                                 </div>
                                 <div class="col-lg-6">
-                                    <img src="images/about/busi-1.jpg" alt="" class="mb-4">
-                                    <img src="images/about/busi-2.jpg" alt="">
+                                    <img src="images/MUN/mun7.JPG" alt="" class="mb-4">
+                                    <img src="images/MUN/mun61.jpg" alt="">
                                 </div>
                                 
                             </div>
@@ -420,6 +420,7 @@
             </div>
         </div>
     </section>
+    
     <!-- Agendas end -->
 
     <!-- event-schedule starts -->
