--- a/about.html
+++ b/about.html
@@ -177,8 +177,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog1.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog1.jpg" alt="image">
+                                <a href="images/MUN/mun13.jpg" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun13.jpg" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -187,8 +187,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog2.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog2.jpg" alt="image">
+                                <a href="images/MUN/mun4.JPG" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun4.JPG" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -197,8 +197,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog3.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog3.jpg" alt="image">
+                                <a href="images/MUN/mun3.JPG" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun3.JPG" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -207,8 +207,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog4.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog1.jpg" alt="image">
+                                <a href="images/MUN/mun1.jpg" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun1.jpg" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -217,18 +217,46 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog3.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog3.jpg" alt="image">
+                                <a href="images/MUN/mun12.jpg" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun12.jpg" alt="image">
                                 </a>
                             </div>
                         </div>
                     </div>
+                    
 
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog4.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog1.jpg" alt="image">
+                                <a href="images/MUN/mun5.JPG" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun5.JPG" alt="image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mansonry-item p-2">
+                        <div class="gallery-item">
+                            <div class="gallery-image">
+                                <a href="images/MUN/mun2.jpg" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun2.JPG" alt="image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mansonry-item p-2">
+                        <div class="gallery-item">
+                            <div class="gallery-image">
+                                <a href="images/MUN/mun15.JPG" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun15.jpg" alt="image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mansonry-item p-2">
+                        <div class="gallery-item">
+                            <div class="gallery-image">
+                                <a href="images/MUN/mun14.jpg" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/MUN/mun14.jpg" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -261,6 +289,7 @@
         </div>
     </section>
     <!-- event-calltoaction ends -->
+    
 
     <!-- footer starts -->
     <footer class="pt-12 pb-7" style="background-image: url(images/pexels-sascha.jpg);">
