--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>JECRC MUN - Event Conference HTML Templates</title>
+    <title>JECRC MUN</title>
     <!-- Logo -->
     <link rel="shortcut icon" type="image/x-icon" href="images/mun-orange.png">
     <!-- Bootstrap core CSS -->
@@ -57,8 +57,8 @@
                                 <li class="submenu dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Events <i class="fas fa-caret-down ms-1" aria-hidden="true"></i></a> 
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">MUN Conference</a></li>
-                                        <li><a href="#">Zero Hour Summit</a></li>
+                                        <li><a href="aboutmun.html">MUN Conference</a></li>
+                                        <li><a href="aboutzhs.html">Zero Hour Summit</a></li>
                                     </ul> 
                                 </li>
                                 <li><a href="#" class="">Team</a></li>
@@ -195,10 +195,7 @@
                                   </span>
                                 </h2>
                             </div>
-                            <p class="mb-4">Explore Rajasthan's largest MUN conference, with an outreach surpassing 18 lac, engaging 350+ institutes and welcoming over 3000 delegates to date.<br/>
-                                Join a global community, uniting over 100 international delegates, driven by a shared vision of progress and change. Hone your debating prowess to embark on a diplomatic journey, where each argument ignites inspiration, influence, and innovation. <br/>
-                                More than just a conference, it's a transformative platform for open dialogue, a leap towards a brighter future.
-                                </p>
+                            <p class="mb-4">Explore Rajasthan's largest MUN conference, with an outreach surpassing 18 lac, engaging 350+ institutes and welcoming over 3000 delegates to date. Participating in JECRC MUN offers a unique opportunity for students to develop crucial skills and broaden their horizons. Through diplomatic simulations, delegates hone negotiation, public speaking, and research abilities while gaining insight into pressing global issues. Engaging with peers from diverse backgrounds fosters cultural awareness and empathy, while leadership roles nurture decision-making and conflict resolution skills. Moreover, we provide a platform for networking with professionals in international relations and diplomacy, paving the way for future academic and career opportunities. By joining JECRC MUN, students embark on a transformative journey towards personal growth, intellectual development, and global citizenship.</p>
                             <!-- <a href="event-detail.html" class="nir-btn">Join Event <i class="fa fa-angle-right "></i></a> -->
                         </div>
                     </div>
@@ -730,6 +727,8 @@
                                     <span class="pricing-currency theme">$</span> 39. <span class="fs-5">99</span></h2>
                                 <p class="mb-0">Person</p>
                             </div> -->
+                            <div class="pb-6">
+                            </div>
                             <ul class="pricing-features-list mb-4">
                                 <li class="d-block border-b pb-2 mb-2">PERKS AND ENTITLEMENTS </li>
                                 <li class="d-block border-b pb-2 mb-2">NETWORKING SKILLS</li>
@@ -753,11 +752,11 @@
                                 <p class="mb-0 white">Per Person</p>
                             </div>
                             <ul class="pricing-features-list mb-4">
-                                <li class="d-block border-b pb-2 mb-2 white">United Nations High Commissioner for Refugees </li>
+                                <li class="d-block border-b pb-2 mb-2 white">UNHCR </li>
                                 <li class="d-block border-b pb-2 mb-2 white">Lok Sabha</li>
-                                <li class="d-block border-b pb-2 mb-2 white">International Monetary Fund</li>
-                                <li class="d-block border-b pb-2 mb-2 white">United Nations Security Council</li>
-                                <li class="d-block white">Historical Crisis Committee</li>
+                                <li class="d-block border-b pb-2 mb-2 white">IMF</li>
+                                <li class="d-block border-b pb-2 mb-2 white">UNSC</li>
+                                <li class="d-block white">HCC</li>
                             </ul>
                             <div class="pricing-btn mb-1">
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn">Register Now</a>
@@ -799,7 +798,7 @@
     <!-- event-pricing ends -->
 
     <!-- event-calltoaction starts -->
-    <section class="event-calltoaction pb-0" style="background-image: url(images/pexels-sascha.jpg);">
+    <section class="event-calltoaction pb-0" style="background-image: url(images/hero-bg.webp);">
         <div class="container">
             <div class="section-title mb-5 w-60 mx-auto text-center">
                 <h3 class="h-title theme-stroke">Conference</h3>
@@ -812,6 +811,18 @@
                         <b>Aftermovie</b>
                         </span>
                     </h2>
+                </div>
+            </div>
+            <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <div id="videoContainer"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- <div class="event-expo w-60 mx-auto mb-7">
@@ -844,7 +855,7 @@
                 <img src="images/blog/blog1.jpg" alt="" class="p-2 bg-white">
                 <div class="video-button text-center position-absolute top-50 start-50 z-index2 translate-50">
                     <div class="call-button text-center">
-                        <button type="button" class="play-btn js-video-button" data-video-id="152879427" data-channel="vimeo">
+                        <button type="button" class="play-btn js-video-button" data-video-id="941516223" data-channel="vimeo">
                             <i class="fa fa-play bg-blue"></i>
                         </button>
                     </div>
@@ -990,7 +1001,7 @@
                                         </p>
                                 </div>
                                 <div class="author-info d-flex align-items-center">
-                                    <img src="images/reviewer/1.jpeg" alt="">
+                                    <img src="images/reviewer/4.jpg" alt="">
                                     <div class="author-title ms-3">
                                         <h5 class="m-0 theme">Vishakha Mulani</h5>
                                         
@@ -1005,7 +1016,7 @@
                                     <p class="m-0">I had a really great time at JECRC  MUN 2023 conference . I learned a lot about international relations 🌎, and I made some great friends . I would definitely recommend MUN to anyone who is interested in learning more about the world and how it works.All Thanks here to oh so amazing team of JECRC!</p>
                                 </div>
                                 <div class="author-info d-flex align-items-center">
-                                    <img src="images/reviewer/1.jpeg" alt="">
+                                    <img src="images/reviewer/3.jpg" alt="">
                                     <div class="author-title ms-3">
                                         <h5 class="m-0 theme">Akshat Jain</h5>
                                         
