--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                         <li><a href="aboutzhs.html">Zero Hour Summit</a></li>
                                     </ul> 
                                 </li>
-                                <li><a href="#" class="">Team</a></li>
+                                <li><a href="team.html" class="">Team</a></li>
                                 <li><a href="#registration" class="">Registration</a></li>
 
                                 <li><a href="contact.html" class="">Contact Us</a></li>
