about zhs image update

--- a/aboutzhs.html
+++ b/aboutzhs.html
@@ -177,8 +177,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog1.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog1.jpg" alt="image">
+                                <a href="images/ZHS/zhs6.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs6.png" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -187,8 +187,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog2.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog2.jpg" alt="image">
+                                <a href="images/ZHS/zhs5.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs5.png" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -197,8 +197,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog3.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog3.jpg" alt="image">
+                                <a href="images/ZHS/zhs3.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs3.png" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -207,8 +207,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog4.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog1.jpg" alt="image">
+                                <a href="images/ZHS/zhs10.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs10.png" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -217,8 +217,35 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog3.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog3.jpg" alt="image">
+                                <a href="images/ZHS/zhs9.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs9.png" alt="image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mansonry-item p-2">
+                        <div class="gallery-item">
+                            <div class="gallery-image">
+                                <a href="images/ZHS/zhs11.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs11.png" alt="image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mansonry-item p-2">
+                        <div class="gallery-item">
+                            <div class="gallery-image">
+                                <a href="images/ZHS/zhs7.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs7.png" alt="image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mansonry-item p-2">
+                        <div class="gallery-item">
+                            <div class="gallery-image">
+                                <a href="images/ZHS/zhs8.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs8.png" alt="image">
                                 </a>
                             </div>
                         </div>
@@ -227,8 +254,8 @@
                     <div class="col-lg-4 col-md-6 mansonry-item p-2">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <a href="images/blog/blog4.jpg" data-lightbox="gallery" data-title="Title">
-                                    <img src="images/blog/blog1.jpg" alt="image">
+                                <a href="images/ZHS/zhs1.png" data-lightbox="gallery" data-title="Title">
+                                    <img src="images/ZHS/zhs1.png" alt="image">
                                 </a>
                             </div>
                         </div>
