--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     </ul> 
                                 </li>
                                 <li><a href="team.html" class="">Team</a></li>
-                                <li><a href="#registration" class="">Registration</a></li>
+                                <li><a href="pricing.html" class="">Registration</a></li>
 
                                 <li><a href="contact.html" class="">Contact Us</a></li>
                                 
@@ -786,11 +786,6 @@
                             <!-- <small>*Please read our term and condition before order ticket</small> -->
                         </div>
                     </div>
-                    <div class="pricing-item text-center p-5">
-                        <div class="pricing-btn mb-1" >
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSOcRxSW7dtwTw3dy5rsOcjeMzaKuEKpsWK_JIGGf7qUCRtg/viewform" class="nir-btn">Apply for EB <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -852,12 +847,9 @@
                 </div>
             </div> -->
             <div class="video-expo w-75 mx-auto position-relative mb-minus">
-                <img src="images/blog/blog1.jpg" alt="" class="p-2 bg-white">
+                <video src="images/after.mp4" alt="" class="p-2 bg-white" autoplay muted loop>
                 <div class="video-button text-center position-absolute top-50 start-50 z-index2 translate-50">
                     <div class="call-button text-center">
-                        <button type="button" class="play-btn js-video-button" data-video-id="941516223" data-channel="vimeo">
-                            <i class="fa fa-play bg-blue"></i>
-                        </button>
                     </div>
                     <div class="video-figure"></div>
                 </div>
