--- a/aboutmun.html
+++ b/aboutmun.html
@@ -81,12 +81,12 @@
     <!-- header ends -->
 
     <!-- BreadCrumb Starts -->  
-    <section class="breadcrumb-main" style="background-image:url(https://wallpaperaccess.com/full/1393241.jpg);">
+    <section class="breadcrumb-main" style="background-image:url(images/hero-bg.webp);">
         <div class="breadcrumb-outer">
             <div class="container">
                 <div class="breadcrumb-content text-center pt-14 pb-2">
                     <h5 class="theme mb-0">JECRC MUN</h5>
-                    <h1 class="mb-0 white">About Us</h1>
+                    <h1 class="mb-0 white">MUN CONFERENCE</h1>
                 </div>
             </div>
         </div>
